--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js">https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity = "sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin = "anonymous" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
     <title>Fan Book</title>
 
@@ -64,10 +63,10 @@
         }
     </style>
     <script>
-            $(document).ready(function () {
-                set_temp();
-                show_comment();
-            });
+        $(document).ready(function () {
+            set_temp();
+            show_comment();
+        });
         function set_temp() {
             $.ajax({
                 type: "GET",
@@ -80,13 +79,13 @@
         }
         function save_comment() {
             let name = $('#name').val();
-            let comment = $('#comment').val;
+            let comment = $('#comment').val();
             $.ajax({
                 type: 'POST',
                 url: '/homework',
-                data: { 
-                    'name_give' : name,
-                    'comment_give' : comment,
+                data: {
+                    'name_give': name,
+                    'comment_give': comment,
                 },
                 success: function (response) {
                     alert(response['msg'])
@@ -125,7 +124,7 @@
 
 <body>
     <div class="mypic">
-        <h1>Artist Name Fan Book</h1>
+        <h1>BTS Fanbook</h1>
         <p>Current Temperature: <span id="temp">36</span>degrees</p>
     </div>
     <div class="mypost">
